2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cpp/cbrowser2.c (main): Fix the -l
	option so that it does not require an
	argument. This fixes a problem when xref
	was not running when local vars is enabled.

2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add include
	file support. The browser recognizes
	the include, include_once, require, and
	require_once keywords.
	* tests/parsers/php.test: Add a series of
	include keyword tests.

2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add a simple debug
	dump function that can be used to print out
	matched rules and text as they are made.

2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Pass SN_FUNC_DEF
	as the second argument to sn_insert_xref
	for a global variable access. The docs
	indicate the SN_REF_TO_GLOB_VAR was not
	a valid context to be passing there.
	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Ditto.
	* tests/parsers/m4.test: Update an xref
	output that was expecting "gv" instead
	of "fu" for a GLOBAL call from scope.
	* tests/parsers/php.test: Add a easy
	mode check and a couple of global var
	xref tests to test for SN_FUNC_DEF change.

2003-05-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Fixup mode switching
	bug when we transition from a FUNCTION mode to
	INITIAL and then back to FUNCTION.
	* tests/parsers/php.test: Add test case for
	FUNCTION mode swithing bug. Also test attempt
	to switch to HTML mode inside a comment, it
	should fail.

2003-05-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Add FUNCTION rule
	to support read, write, and call xrefs
	inside macros. Set the function declaration